--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,12 @@ body{
     overflow:hidden;
 }
 
+.displayName{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .webgl
 {
     position: fixed;
