--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,20 @@ body{
     padding: 10px 30px;
 }
 
+.dialogueModal{
+    position:absolute;
+    bottom: 150px;
+    left:50%;
+    transform: translateX(-50%);
+    width:500px;
+    height:200px;
+    padding:20px;
+    background-color: #efefef;
+    border-radius: 20px;
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+}
+
 #kami-test{
     position: absolute;
     z-index: 3;
