--- a/src/styles.css
+++ b/src/styles.css
@@ -34,8 +34,9 @@ body{
     position: absolute;
     right: 50px;
     top:10px;
-    background-color:rgba(255,100,155,0.5) ;
-    border: 1px solid black;
+    background-color:rgba(255,100,255,0.5) ;
+    border: 1px solid rgb(25, 0, 116);
+    color:rgb(25, 0, 116);  
     min-width: 10vw;
     padding: 10px 30px;
 }
